; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/mlx4/extr_mr.c___mlx4_mpt_free_icm.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/mlx4/extr_mr.c___mlx4_mpt_free_icm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx4_dev = type { i32 }
%struct.mlx4_mr_table = type { i32 }
%struct.TYPE_2__ = type { %struct.mlx4_mr_table }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__mlx4_mpt_free_icm(%struct.mlx4_dev* %0, i32 %1) #0 {
  %3 = alloca %struct.mlx4_dev*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.mlx4_mr_table*, align 8
  store %struct.mlx4_dev* %0, %struct.mlx4_dev** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.mlx4_dev*, %struct.mlx4_dev** %3, align 8
  %7 = call %struct.TYPE_2__* @mlx4_priv(%struct.mlx4_dev* %6)
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  store %struct.mlx4_mr_table* %8, %struct.mlx4_mr_table** %5, align 8
  %9 = load %struct.mlx4_dev*, %struct.mlx4_dev** %3, align 8
  %10 = load %struct.mlx4_mr_table*, %struct.mlx4_mr_table** %5, align 8
  %11 = getelementptr inbounds %struct.mlx4_mr_table, %struct.mlx4_mr_table* %10, i32 0, i32 0
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @mlx4_table_put(%struct.mlx4_dev* %9, i32* %11, i32 %12)
  ret void
}

declare dso_local %struct.TYPE_2__* @mlx4_priv(%struct.mlx4_dev*) #1

declare dso_local i32 @mlx4_table_put(%struct.mlx4_dev*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
